testsuite/tests/lexical_envs/envs_4/test.out
CompilationUnit[1:1-3:13]
|f_prelude:
|  AdaNodeList[1:1-1:1]: <empty list>
|f_body:
|  LibraryItem[1:1-3:13]
|  |f_has_private:
|  |  PrivateAbsent[1:1-1:1]
|  |f_item:
|  |  GenericPackageDecl[1:1-3:13]
|  |  |f_formal_part:
|  |  |  GenericFormalPart[1:1-1:8]
|  |  |  |f_decls:
|  |  |  |  AdaNodeList[1:8-1:8]: <empty list>
|  |  |f_package_decl:
|  |  |  GenericPackageInternal[2:1-3:13]
|  |  |  |f_package_name:
|  |  |  |  DefiningName[2:9-2:16]
|  |  |  |  |f_name:
|  |  |  |  |  DottedName[2:9-2:16]
|  |  |  |  |  |f_prefix:
|  |  |  |  |  |  Id[2:9-2:12]: Foo
|  |  |  |  |  |f_suffix:
|  |  |  |  |  |  Id[2:13-2:16]: Bar
|  |  |  |f_aspects: <null>
|  |  |  |f_public_part:
|  |  |  |  PublicPart[2:19-3:1]
|  |  |  |  |f_decls:
|  |  |  |  |  AdaNodeList[2:19-2:19]: <empty list>
|  |  |  |f_private_part: <null>
|  |  |  |f_end_name:
|  |  |  |  EndName[3:5-3:12]
|  |  |  |  |f_name:
|  |  |  |  |  DottedName[3:5-3:12]
|  |  |  |  |  |f_prefix:
|  |  |  |  |  |  Id[3:5-3:8]: Foo
|  |  |  |  |  |f_suffix:
|  |  |  |  |  |  Id[3:9-3:12]: Bar
|f_pragmas:
|  PragmaNodeList[3:13-3:13]: <empty list>

==== Dumping lexical environments ====
$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] __standard:1:1-129:14>]

@2 = LexEnv(Static_Primary, Parent=@1, Node=<GenericPackageDecl ["Foo.Bar"] foo-bar.ads:1:1-3:13>):
    <empty>

@1 = LexEnv(Static_Primary, Parent=@3, Node=<PackageDecl ["Foo"] foo.ads:1:1-2:9>):
    bar: [<GenericPackageDecl ["Foo.Bar"] foo-bar.ads:1:1-3:13>]

@3 = LexEnv(Static_Primary, Parent=$root, Node=<PackageDecl ["Standard"] __standard:1:1-129:14>):
    "&": [<SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:109:28-110:43>]
    "*": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>, <SyntheticSubpDecl [] __standard:112:20-114:41>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "**": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "+": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "-": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "/": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "/=": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "<": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "<=": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "=": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    ">": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    ">=": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:21:21-21:26>, <SyntheticSubpDecl [] __standard:22:26-22:31>, <SyntheticSubpDecl [] __standard:23:31-23:36>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "abs": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>, <SyntheticSubpDecl [] __standard:12:27-13:50>, <SyntheticSubpDecl [] __standard:14:27-15:50>, <SyntheticSubpDecl [] __standard:16:27-17:72>, <SyntheticSubpDecl [] __standard:18:27-20:32>, <SyntheticSubpDecl [] __standard:112:20-114:41>]
    "and": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>]
    "mod": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>]
    "not": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>]
    "or": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>]
    "rem": [<SyntheticSubpDecl [] __standard:4:19-4:53>, <SyntheticSubpDecl [] __standard:7:34-7:66>, <SyntheticSubpDecl [] __standard:8:34-8:68>, <SyntheticSubpDecl [] __standard:9:34-9:68>, <SyntheticSubpDecl [] __standard:10:34-10:68>, <SyntheticSubpDecl [] __standard:11:34-11:70>]
    "xor": [<SyntheticSubpDecl [] __standard:3:19-3:32>, <SyntheticSubpDecl [] __standard:105:18-105:56>, <SyntheticSubpDecl [] __standard:107:23-108:38>, <SyntheticSubpDecl [] __standard:109:28-110:43>]
    'a': [<EnumLiteralDecl ["'A'"] __standard:21:22-21:25>, <EnumLiteralDecl ["'A'"] __standard:22:27-22:30>, <EnumLiteralDecl ["'A'"] __standard:23:32-23:35>]
    abort_signal_: [<ExceptionDecl ["Abort_Signal_"] __standard:128:3-128:32>]
    ascii: [<PackageDecl ["ASCII"] __standard:24:3-104:13>]
    boolean: [<TypeDecl ["Boolean"] __standard:3:3-3:33>]
    character: [<TypeDecl ["Character"] __standard:21:3-21:27>]
    constraint_error: [<ExceptionDecl ["Constraint_Error"] __standard:123:3-123:32>]
    duration: [<TypeDecl ["Duration"] __standard:112:3-114:42>]
    false: [<EnumLiteralDecl ["False"] __standard:3:20-3:25>]
    float: [<TypeDecl ["Float"] __standard:14:3-15:51>]
    foo: [<PackageDecl ["Foo"] foo.ads:1:1-2:9>]
    integer: [<TypeDecl ["Integer"] __standard:4:3-4:54>]
    long_float: [<TypeDecl ["Long_Float"] __standard:16:3-17:73>]
    long_integer: [<TypeDecl ["Long_Integer"] __standard:9:3-9:69>]
    long_long_float: [<TypeDecl ["Long_Long_Float"] __standard:18:3-20:33>]
    long_long_integer: [<TypeDecl ["Long_Long_Integer"] __standard:10:3-10:69>]
    long_long_long_integer: [<TypeDecl ["Long_Long_Long_Integer"] __standard:11:3-11:71>]
    natural: [<SubtypeDecl ["Natural"] __standard:5:3-5:57>]
    numeric_error: [<ExceptionDecl ["Numeric_Error"] __standard:124:3-124:32>]
    positive: [<SubtypeDecl ["Positive"] __standard:6:3-6:57>]
    program_error: [<ExceptionDecl ["Program_Error"] __standard:125:3-125:32>]
    root_types_: [<PackageDecl ["root_types_"] __standard:118:3-122:19>]
    short_float: [<TypeDecl ["Short_Float"] __standard:12:3-13:51>]
    short_integer: [<TypeDecl ["Short_Integer"] __standard:8:3-8:69>]
    short_short_integer: [<TypeDecl ["Short_Short_Integer"] __standard:7:3-7:67>]
    storage_error: [<ExceptionDecl ["Storage_Error"] __standard:126:3-126:32>]
    string: [<TypeDecl ["String"] __standard:105:3-105:57>]
    tasking_error: [<ExceptionDecl ["Tasking_Error"] __standard:127:3-127:32>]
    true: [<EnumLiteralDecl ["True"] __standard:3:27-3:31>]
    universal_int_type_: [<TypeDecl ["Universal_Int_Type_"] __standard:116:3-116:45>]
    universal_real_type_: [<TypeDecl ["Universal_Real_Type_"] __standard:117:3-117:42>]
    wide_character: [<TypeDecl ["Wide_Character"] __standard:22:3-22:32>]
    wide_string: [<TypeDecl ["Wide_String"] __standard:107:3-108:39>]
    wide_wide_character: [<TypeDecl ["Wide_Wide_Character"] __standard:23:3-23:37>]
    wide_wide_string: [<TypeDecl ["Wide_Wide_String"] __standard:109:3-110:44>]

$root = LexEnv(Static_Primary, Parent=null):
    standard: [<PackageDecl ["Standard"] __standard:1:1-129:14>]

@4 = LexEnv(Static_Primary, Parent=@2, Node=<GenericPackageInternal ["Foo.Bar"] foo-bar.ads:2:1-3:13>):
    <empty>

